# wl-keypeek

./: .gitignore  Cargo.toml  README.md  install.sh  zmk_cache_1d50_615e.json
.github/workflows/: workflow.yml
resources/: 99-keypeek.rules  keypeek-wayland.service
src/: connection.rs  device_discovery.rs  gtk_app.rs  keyboard.rs  layout_key.rs  main.rs  overlay_window.rs  settings.rs  settings_window.rs  tray.rs  ui_wake.rs
src/keycode_labels/: basic.rs  keycode_label.rs  mod.rs
src/overlay_window/: connection_flow.rs  settings_sync.rs  state.rs  ui_overlay.rs  ui_settings.rs
src/protocols/: mod.rs  zmk.rs  zmk_parser.rs  zmk_rpc.rs  zmk_studio.rs
src/qmk_keycode_labels/: basic.rs
src/rendering/: cairo_renderer.rs  mod.rs
src/zmk_keycode_labels/: behavior.rs  keycode_label.rs
