[package]
name = "wl-keypeek"
license = "GPL-3.0-only"
description = "Wayland-native GTK4 keyboard layer overlay for ZMK, VIA, and Vial"
authors = ["Kristijan Ribaric"]
repository = "https://github.com/kristijanribaric/wl-keypeek"
readme = "README.md"
version = "1.0.0"
edition = "2021"

[dependencies]
rust-ini = "0.21.3"
dirs = "6.0.0"
qmk-via-api = { version = "0.7.0" }
hidapi = "2.6.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
lzma-rs = "0.3"
serialport = "4.9.0"
zmk-studio-api = { version = "0.3.1", features = ["serial", "ble"] }

# Wayland-native GTK4 overlay stack
glib = "0.22.5"
gtk4 = "0.11.2"
gtk4-layer-shell = "0.8.0"
cairo-rs = "0.22.0"
pango = "0.22.0"
pangocairo = "0.22.0"
ksni = { version = "0.3.4", features = ["blocking"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }

[package.metadata.bundle]
name = "wl-KeyPeek"
identifier = "wl-keypeek"
